# plexport

./: .gitignore  .remarkrc.yaml  Makefile  Pipfile  README.md  mypy.ini  plexport.py  plexport.sh  pyproject.toml
.github/workflows/: codeql-analysis.yml  main.yml
plexport/: plex_db_transform.py  plex_films_extractor.py  plex_films_mycollections_importer.py
tests/: __init__.py  test_plex_db_transform.py  test_plex_films_extractor.py  test_plex_films_mycollections_importer.py
tests/resources/: test_plex_db_export.json  test_plex_films_export_page_01.json  test_plex_films_export_page_02.json  test_plex_films_export_page_03.json  test_plex_films_export_page_04.json
