[tool.poetry]
name = "plexport"
version = "1.0.0"
description = "plexport is a Python command-line tool that can perform ETL operations against a Plex Media Server instance."
license = "GPL-3.0-only"
authors = ["Antoine <achatain@users.noreply.github.com>"]
homepage = "https://bonjour.software"
repository = "https://github.com/bonjoursoftware/plexport"
package-mode = false

[tool.poetry.dependencies]
pymongo = "4.15.5"
python = "^3.14"
requests = "2.32.5"
urllib3 = "2.6.1"

[tool.poetry.group.dev.dependencies]
black = "25.12.0"
flake8 = "7.3.0"
mongita = "1.2.0"
mypy = "1.19.0"
pytest = "9.0.2"
pytest-cov = "7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
