[tool.poetry]
name = "plexport"
version = "1.0.0"
description = "plexport is a Python command-line tool that can perform ETL operations against a Plex Media Server instance."
license = "GPL-3.0-only"
authors = ["Antoine <achatain@users.noreply.github.com>"]
homepage = "https://bonjour.software"
repository = "https://github.com/bonjoursoftware/plexport"
package-mode = false

[tool.poetry.dependencies]
pymongo = "4.16.0"
python = "^3.14"
requests = "2.33.1"
urllib3 = "2.6.3"

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
flake8 = "7.3.0"
mongita = "1.2.0"
mypy = "1.20.1"
pytest = "9.0.3"
pytest-cov = "7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
