[tool.poetry]
name = "plexport"
version = "1.0.0"
description = "plexport is a Python command-line tool that can perform ETL operations against a Plex Media Server instance."
license = "GPL-3.0-only"
authors = ["Antoine <achatain@users.noreply.github.com>"]
homepage = "https://bonjour.software"
repository = "https://github.com/bonjoursoftware/plexport"
package-mode = false

[tool.poetry.dependencies]
pymongo = "4.17.0"
python = "^3.14"
requests = "2.34.0"
urllib3 = "2.7.0"

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
flake8 = "7.3.0"
mongita = "1.2.0"
mypy = "2.1.0"
pytest = "9.0.3"
pytest-cov = "7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
